# CoWrite

./: .gitignore  CMakeLists.txt
.vsccode/: settings.json
frontend/: ai-worker.js  ai_test.html  client.html  transformers.browser.mjs
frontend/ai_bundle/: entry.js  package-lock.json  package.json  vite.config.js
src/: main.cpp
